--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -10,27 +10,61 @@
 .profile-container {
     display: grid;
     grid-template-columns: 30% 70%;
-    grid-template-areas: "picture info";
+    grid-template-rows: min-content;
+    grid-template-areas: "picture info"
+                         "buttons nothing";
     padding: 80px;
-    height: 90%;
+    height: 50%;
+    /* background-color: darksalmon; */
+}
+
+.profile-buttons{
+    grid-area: buttons;
+    /* background-color: blueviolet; */
+    display: block;
+    text-align: center;
+    
+}
+
+.profile-info-container {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   grid-template-areas: "leftinfo rightinfo";
+
+    margin-top: 35px;
+}
+
+.left-profile-info-column{
+    grid-area: leftinfo;
+    text-align: center;
+    
+    /* background-color: red; */
+}
+
+.right-profile-info-column{
+    grid-area: rightinfo;
+    text-align: center;
+    
+    /* background-color: aqua; */
+}
+
+.profileinfo-tf {
+    width: 80%;
 }
 
 .profile-column-left {
     grid-area: picture;
-    /* background-color: aqua; */
     text-align: center;
     
-
+    
+    /* background-color: aqua; */
 }
 
 .profile-column-right {
     grid-area: info;
-    /* background-color: red; */
-
     font-family: 'Poppins', sans-serif;
-    text-align: center;
-    font-weight: 600;
-    font-size: 2.3rem;
+    
+    /* background-color: red; */
 }
 
 .profile-picture {
@@ -43,6 +77,26 @@
 
 .name-title {
     color: rgb(19, 19, 19);
+}
+
+.profile-column-right h2 {
+    font-size: 2.8rem;
+    text-align: center;
+    
+}
+
+.profile-column-right p {
+    font-size: 1rem;
+    
+}
+
+.edit-btn {
+    /* top: 50%;
+    float: right;
+    position: relative;
+    transform: translateY(-50%); */
+    
+    
 }
 
 @media (max-width: 1500px) {
@@ -65,6 +119,17 @@
             font-size: 2.1rem;
 
     }
+
+    .profile-column-right h2 {
+        font-size: 2.8rem;
+        
+    }
+    
+    .profile-column-right p {
+        font-size: 1rem;
+        
+    }
+
     .name-title {
         margin-top: 40px;
     }
@@ -72,7 +137,6 @@
 
 @media (max-width: 1000px) {
     .profile-column-right {
-        font-size: 1.8rem;
         overflow: auto;
     }
 }
