--- a/frontend/src/css/Administration.css
+++ b/frontend/src/css/Administration.css
@@ -1,29 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+
 *,
 *::before,
 *::after {
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 
-.column-middle {
-    font-family: 'Poppins', sans-serif;
 
-}
 
 .admin-container {
     height: 50%;
     padding: 80px;
-
+    
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: minmax(min-content, max-content);
     grid-template-areas:    "title tabs"
-                            "content content";
+    "content content";
 }
 
 .admin-title {
     font-size: 2.5rem;
     color: rgb(19, 19, 19);
 
+}
+
+.pagination-container {
+    /* center text horizontally and vertically */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 50px;
 }
 
 .empty-msg-container{
@@ -54,6 +63,10 @@
 .list-item-admin {
     text-decoration: none !important;
     color: #000000 !important;
+}
+
+.list-item-button {
+    border-radius: 6px !important;
 }
 
 .list-item-button:active {
@@ -101,5 +114,9 @@
     .admin-menu {
         margin-top: 20px;
         margin-left: 0;
+    }
+
+    .pagination-container {
+        margin-top: 20px;
     }
 }
