--- a/frontend/src/css/Administration.css
+++ b/frontend/src/css/Administration.css
@@ -11,7 +11,7 @@
 
 .admin-container {
     height: 100%;
-    padding: 80px;
+    padding: 38px 80px 80px 80px;
     padding-bottom: 60px;
     
     display: grid;
