--- a/frontend/src/css/ProductList.css
+++ b/frontend/src/css/ProductList.css
@@ -19,7 +19,7 @@
     background-color: #f5f5f5;
 
     display: grid;
-    grid-template-columns: 180px 80%;
+    grid-template-columns: 180px calc(100% - 180px);
     grid-template-areas: "image info";
 
 
@@ -45,12 +45,12 @@
 .product-list-info{
     grid-area: info;
 
-    margin-left: 20px;
+    /* padding-left: 20px; */
     padding-top: 8px;
     display: grid;
 
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 30% 60% 20%;
+    grid-template-rows: 40px 60px 30px;
     grid-template-areas:    "product-title product-title product-title"
                             "product-owner product-owner product-owner"
                             "product-details product-details product-details";
@@ -69,18 +69,64 @@
 }
 
 .product-list-title{
+    padding-left: 20px;
     font-weight: 500;
     font-size: 1.4rem;
     color: #131313;
 }
 
 .product-list-owner-text{
+    padding-left: 20px;
     color: #9c9c9c;
 }
 
 .product-list-owner-container {
     grid-area: product-owner;
-    font-size: 1rem;
+    font-size: 0.9rem;
+}
+
+.product-list-details-container {
+    grid-area: product-details;
+
+    
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "bidders currentprice";
+
+    /* background-color: #131313; */
+}
+
+.current-bidders-container {
+    grid-area: bidders;
+    
+    /* background-color: red; */
+    font-size: 0.9rem;
+
+   
+}
+
+.current-currentprice-container {
+    grid-area: currentprice;
+    /* background-color: aquamarine; */
+
+    font-size: 0.9rem;
+
+}
+
+.current-bidders-stack{
+    /* center contains vertically */
+    display: flex;
+    align-items: center;
+}
+
+.current-bidders-text {
+    color: #9c9c9c;
+}
+
+.current-bidders-icon {
+    margin-left: 4px;
+    color: #9c9c9c;
+    padding: 3px !important;
 }
 
 .product-list-title-container {
