--- a/frontend/src/css/Administration.css
+++ b/frontend/src/css/Administration.css
@@ -11,7 +11,7 @@
 
 .admin-container {
     height: 100%;
-    padding: 38px 80px 80px 80px;
+    padding: 50px 80px 80px 80px;
     padding-bottom: 60px;
     
     display: grid;
@@ -80,6 +80,11 @@
 
 .admin-title {
     grid-area: title;
+    
+    font-weight: 600;
+    font-size: 2.5rem;
+    color: rgb(19, 19, 19);
+
 }
 
 .delete-icon-admin {
