--- a/frontend/src/css/Bids.css
+++ b/frontend/src/css/Bids.css
@@ -10,11 +10,11 @@
 
 .bids-container {
     height: 100%;
-    padding: 20px 80px 80px 80px;
-    padding-bottom: 0px;
+    padding: 20px 80px 0px 80px;
+    /* padding-bottom: 0px; */
     display: grid;
     grid-template-columns: 25% 75%;
-    grid-template-rows: 9% 5% 86%;
+    grid-template-rows: 120px 56px 86%;
     grid-template-areas:    "title search"
                             "nothing filtertags"
                             "filters products";
@@ -59,7 +59,7 @@
 
 .bids-title{
     grid-area: title;
-    /* background-color: aqua; */
+    /* background-color: red; */
     
     /* center text vertically */
     display: flex;
@@ -69,7 +69,7 @@
 
 .bids-title > h4 {
 
-    
+    font-weight: 600;
     font-size: 2.5rem;
     color: rgb(19, 19, 19);
 
@@ -98,7 +98,7 @@
 }
 
 .filter-title {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 500;
     
     color: rgb(19, 19, 19);
