--- a/frontend/src/css/Administration.css
+++ b/frontend/src/css/Administration.css
@@ -27,6 +27,11 @@
 
 }
 
+.admin-menu-option { 
+    text-transform: unset !important;
+    
+}
+
 .pagination-container {
     /* center text horizontally and vertically */
     display: flex;
@@ -75,7 +80,7 @@
 }
 
 .list-item-button:hover {
-    background-color: #9966cc2f !important;
+    background-color: #9966cc1c !important;
 }
 
 .admin-title {
