--- a/frontend/src/css/SignIn.css
+++ b/frontend/src/css/SignIn.css
@@ -33,6 +33,47 @@ input {
     grid-template-areas: "art signform";
 }
 
+.location-fields-container { 
+    width: 100%;
+    max-width: 400px !important;
+    display: grid;
+    grid-template-columns: 80% 20%;
+    grid-template-areas: "locationtextfield locationbutton";
+}
+
+.location-textfield-container {
+
+    grid-area: locationtextfield;
+    /* background-color: red; */
+    text-align: start;
+}
+
+.location-textfield {
+    width: 100% !important;
+    /* max-width: 400px !important; */
+}
+
+.location-button-container {
+    grid-area: locationbutton;
+    /* background-color: red; */
+    margin-left: auto;
+}
+
+.location-button {
+    /* margin-left: 5% !important; */
+    height: 100%;
+    width: 100%;
+
+    border-radius: 12px !important;
+
+    background-color: #1976d2 !important;
+}
+
+.location-button:hover {
+    background-color: #1e82e6 !important;
+
+}
+
 .signinart {
     grid-area: art;
     /* background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1920' height='1080' preserveAspectRatio='none' viewBox='0 0 1920 1080'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1133%26quot%3b)' fill='none'%3e%3crect width='1920' height='1080' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M960 1077.83C1106.45 1079.59 1262.81 1049.48 1359.32 939.32 1451.99 833.57 1443.58 680.07 1431.31 540 1420.37 415.17 1382.6 294.61 1294.97 205.03 1206.36 114.43 1086.35 68.3 960 58.16 820.72 46.98 670.06 52.7 566.57 146.57 459.59 243.64 428.17 395.55 428.85 540 429.51 683.68 469.27 827.54 570.23 929.77 671.73 1032.58 815.53 1076.1 960 1077.83' fill='rgba(228%2c 217%2c 255%2c 1)'%3e%3c/path%3e%3cpath d='M960 784.47C1026.57 785.27 1097.64 771.58 1141.51 721.51 1183.63 673.44 1179.81 603.67 1174.23 540 1169.26 483.26 1152.09 428.46 1112.26 387.74 1071.98 346.56 1017.43 325.59 960 320.98 896.69 315.9 828.21 318.5 781.17 361.17 732.54 405.29 718.26 474.34 718.57 540 718.87 605.31 736.94 670.7 782.83 717.17 828.97 763.9 894.33 783.68 960 784.47' fill='rgba(166%2c 150%2c 205%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1133'%3e%3crect width='1920' height='1080' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");     */
@@ -62,7 +103,8 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
-
+    /* background-color: aqua; */
+    
 }
 
 .signform {
@@ -79,7 +121,7 @@ input {
 .signin-title{
     font-size: 2.5rem;
     color: rgb(39, 39, 39);
-    padding-bottom: 20px;
+    padding-bottom: 26px;
 }
 
 .signin-signup-alert {
