--- a/frontend/src/css/ProductList.css
+++ b/frontend/src/css/ProductList.css
@@ -25,6 +25,10 @@
 
 }
 
+.product-name-link {
+    text-decoration: none !important;
+}
+
 .product-list-title:hover{
     cursor: pointer;
     text-decoration: underline;
